<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="104dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_opening"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/page_title_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_title" />


        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_detail_poster" />

        <TextView
            android:id="@+id/movie_detail_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/page_title_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_title_genre" />

        <TextView
            android:id="@+id/movie_detail_director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/page_title_director"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_title_director" />

        <TextView
            android:id="@+id/movie_detail_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/page_title_cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_title_cast" />

        <TextView
            android:id="@+id/movie_detail_opening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/page_title_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_title_release_date" />

        <TextView
            android:id="@+id/movie_detail_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_opening" />

        <TextView
            android:id="@+id/page_title_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/director"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/page_title_genre"
            app:layout_constraintTop_toBottomOf="@+id/page_title_genre" />

        <TextView
            android:id="@+id/page_title_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cast"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/page_title_director"
            app:layout_constraintTop_toBottomOf="@+id/page_title_director" />

        <TextView
            android:id="@+id/page_title_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/page_title_cast"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_cast" />

        <WebView
            android:id="@+id/movie_detail_trailer"
            android:layout_width="380dp"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_synopsis" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>